--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.5",
     "react-spring": "^9.2.4",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.39.0",
     "styled-components": "^5.3.1"
   },
