--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
     "antd": "^4.16.13",
     "classnames": "^2.3.1",
     "next": "11.1.2",
+    "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
+    "react-slick": "^0.28.1",
     "react-spring": "^9.2.4",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "remove": "^0.1.5",
     "sass": "^1.39.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
+    "@types/react-slick": "^0.23.5",
     "typescript": "4.4.2"
   }
 }
