feat: adding component login and register

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.16.13",
     "classnames": "^2.3.1",
     "next": "11.1.2",
@@ -15,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-hook-form": "^7.16.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
     "react-slick": "^0.28.1",
