--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.16.13",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "next": "11.1.2",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
@@ -25,7 +27,8 @@
     "redux-thunk": "^2.3.0",
     "remove": "^0.1.5",
     "sass": "^1.39.0",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
