--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@types/react-dom": "^17.0.10",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "next": "11.1.2",
